@@ -45,6 +45,7 @@ HORIKAWA Kazunori <kaz-hori@tkd.att.ne.jp>
 Jan Fricke <fricke@uni-greifswald.de>
 Jan Zerebecki <jan.list@elite-pferde.de>
 Jason Thomas <jason@topic.com.au>
+Jean-Jacques Michel <jjmichel@linbox.com>
 Jeremy Katz <katzj@redhat.com>
 Jochen Hoenicke <jochen@gnu.org>
 Johannes Kroeger <hanne@squirrel.owl.de>
